Fix mobile cursor from jumping to bottom
When selecting text on the android, it was possible to also highlight the text inside the buttons in the adder. When this happened, the range would grab everything from where you started to highlight to the very end of the dom because the adder is attached as the last node inside body.

The simple fix is to prohibit text selection inside the adder which prevents the selection from getting the adder itself.

--- a/src/styles/annotator/components/adder.scss
+++ b/src/styles/annotator/components/adder.scss
@@ -22,6 +22,11 @@ $adder-transition-duration: 80ms;
   background: var.$color-background;
   border-radius: var.$annotator-border-radius;
 
+  // Prevent the adder from being highlighted during text selection.
+  // This caused an bug that appears on android devices during text selection.
+  // See https://github.com/hypothesis/product-backlog/issues/878
+  user-select: none;
+
   // The adder toolbar has a distinctive, broad-spreading drop shadow
   box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.25);
 
